chore: setup Open API

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "hono": "^4.6.13"
+    "@hono/zod-openapi": "^0.18.3",
+    "hono": "^4.6.13",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.11.2",
