--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "dependencies": {
     "@hono/zod-openapi": "^0.18.3",
     "hono": "^4.6.13",
+    "hono-pino": "^0.7.0",
+    "pino": "^9.5.0",
+    "pino-pretty": "^13.0.0",
+    "stoker": "^1.4.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
