--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   },
   "dependencies": {
     "@hono/zod-openapi": "^0.18.3",
+    "dotenv": "^16.4.7",
+    "dotenv-expand": "^12.0.1",
     "hono": "^4.6.13",
     "hono-pino": "^0.7.0",
     "pino": "^9.5.0",
