--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "hono-basic",
+  "type": "module",
+  "version": "1.0,0",
   "scripts": {
     "dev": "bun run --hot src/index.ts",
     "lint": "eslint ."
   },
   "dependencies": {
     "@hono/zod-openapi": "^0.18.3",
+    "@scalar/hono-api-reference": "^0.5.165",
     "dotenv": "^16.4.7",
     "dotenv-expand": "^12.0.1",
     "hono": "^4.6.13",
