--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "strict": true
+    "resolveJsonModule": true,
+    "strict": true,
+    "esModuleInterop": true
   }
 }
