--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT = 3002
 LOG_LEVEL = debug
 NODE_ENV = development
-DATABASE_URL="postgresql://postgres:123@localhost:5434/hono?schema=public"
+DATABASE_URL="postgresql://postgres:123@localhost:5434/hono?search_path=public"
