--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.4.7",
     "dotenv-expand": "^12.0.1",
     "drizzle-orm": "^0.38.3",
+    "drizzle-zod": "^0.6.1",
     "hono": "^4.6.13",
     "hono-pino": "^0.7.0",
     "pino": "^9.5.0",
